<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/general_settings">
        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_communication_phonelink_ring"
            app:key="isAutoConnect"
            app:summary="@string/auto_connect_summary"
            app:title="@string/auto_connect" />
        <moe.matsuri.nb4a.ui.ColorPickerPreference
            android:title="@string/theme"
            app:icon="@drawable/ic_baseline_color_lens_24"
            app:key="appTheme" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/night_mode"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_baseline_wb_sunny_24"
            app:key="nightTheme"
            app:title="@string/night_mode"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="vpn"
            app:entries="@array/service_modes"
            app:entryValues="@array/service_mode_values"
            app:icon="@drawable/ic_device_developer_mode"
            app:key="serviceMode"
            app:title="@string/service_mode"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="1000"
            app:entries="@array/notification_entry"
            app:entryValues="@array/notification_value"
            app:icon="@drawable/ic_baseline_shutter_speed_24"
            app:key="speedInterval"
            app:title="@string/speed_interval"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:defaultValue="true"
            app:key="profileTrafficStatistics"
            app:summary="@string/profile_traffic_statistics_summary"
            app:title="@string/profile_traffic_statistics" />
        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_speed_24"
            app:key="showDirectSpeed"
            app:summary="@string/show_direct_speed_sum"
            app:title="@string/show_direct_speed"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_device_data_usage"
            app:key="meteredNetwork"
            app:summary="@string/metered_summary"
            app:title="@string/metered" />
        <SwitchPreference
            app:icon="@drawable/baseline_developer_board_24"
            app:key="acquireWakeLock"
            app:summary="@string/acquire_wake_lock_summary"
            app:title="@string/acquire_wake_lock" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_route">
        <SwitchPreference
            app:icon="@drawable/ic_navigation_apps"
            app:key="proxyApps"
            app:summary="@string/proxied_apps_summary"
            app:title="@string/proxied_apps" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="bypassLan"
            app:title="@string/route_opt_bypass_lan" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="1"
            app:entries="@array/traffic_sniffing_values"
            app:entryValues="@array/int_array_3"
            app:icon="@drawable/ic_baseline_manage_search_24"
            app:key="trafficSniffing"
            app:title="@string/traffic_sniffing"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/ipv6_mode"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_image_looks_6"
            app:key="ipv6Mode"
            app:title="@string/ipv6"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_dns">
        <EditTextPreference
            app:defaultValue="https://dns.google/dns-query"
            app:icon="@drawable/ic_action_dns"
            app:key="remoteDns"
            app:title="@string/remote_dns"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="https://223.5.5.5/dns-query"
            app:icon="@drawable/ic_action_dns"
            app:key="directDns"
            app:title="@string/direct_dns"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_camera_24"
            app:key="enableDnsRouting"
            app:summary="@string/dns_routing_message"
            app:title="@string/enable_dns_routing" />
        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_action_lock"
            app:key="enableFakeDns"
            app:summary="@string/fakedns_message"
            app:title="@string/enable_fakedns" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/inbound_settings">
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="mixedPort"
            app:title="@string/port_proxy"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_nat_24"
            app:key="allowAccess"
            app:summary="@string/allow_access_sum"
            app:title="@string/allow_access" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cag_misc">
        <moe.matsuri.nb4a.ui.UrlTestPreference
            app:defaultValue="http://cp.cloudflare.com/"
            app:icon="@drawable/ic_baseline_cast_connected_24"
            app:key="connectionTestURL"
            app:title="@string/connection_test_url"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_flip_camera_android_24"
            app:key="networkChangeResetConnections"
            app:title="@string/network_change_reset_connections"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="wakeResetConnections"
            app:title="@string/wake_reset_connections"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="showBottomBar"
            app:title="@string/show_bottom_bar" />
    </PreferenceCategory>
</PreferenceScreen>
